--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -45,7 +45,7 @@
                     <a href="">Forgot password?</a>
                 </div>
                 <div class="col-12 button-container">
-                    <p:button  value="Sign In" styleClass="ui-button-info ui-button-raised"/>
+                    <p:button  value="Sign In" styleClass="ui-button-info ui-button-raised" outcome="app/home"/>
                 </div>
             </div>
         </div>
