3 tipos de preguntas

--- a/src/main/webapp/WEB-INF/topbar.xhtml
+++ b/src/main/webapp/WEB-INF/topbar.xhtml
@@ -23,7 +23,7 @@
                 </h:form>
             </div>
             <div class="topbar-right">
-                <p:commandButton value="Catálogo" class="mr-2 ui-button-flat"/>
+                <!--p:commandButton value="Catálogo" class="mr-2 ui-button-flat"/-->
                 
                 <a href="#" id="user-display">
                     <span class="username">Emma Davis</span>
